[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameScene.gd" type="Script" id=1]
[ext_resource path="res://Game Assets/UserInterface/Fonts/SpaceMono-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.921569, 0.901961, 0.764706, 1 )

[sub_resource type="DynamicFont" id=1]
size = 4
outline_size = 1
font_data = ExtResource( 2 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 180.0
margin_bottom = 90.0

[node name="TimeHealth" type="AnimationPlayer" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="SidePanel" type="Panel" parent="."]
margin_right = 30.0
margin_bottom = 90.0
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="SidePanel"]
margin_right = 30.0
margin_bottom = 90.0
custom_constants/margin_right = 5
custom_constants/margin_top = 70
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="TimeLeft" type="Label" parent="SidePanel/MarginContainer"]
margin_left = 5.0
margin_top = 74.0
margin_right = 25.0
margin_bottom = 81.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Time Left"

[node name="MarginContainer2" type="MarginContainer" parent="SidePanel"]
margin_top = 90.0
margin_right = 90.0
margin_bottom = 120.0
rect_rotation = 270.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 20
custom_constants/margin_bottom = 5

[node name="TimeBar" type="ProgressBar" parent="SidePanel/MarginContainer2"]
margin_left = 20.0
margin_top = 5.0
margin_right = 85.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 10.0
value = 10.0
percent_visible = false

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
